<resources>
    <string name="app_name">U-Games</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>



    <string name="login">Login</string>
    <string name="register">Register</string>

    <!--ACTIVITY_LOGIN.xtml STRINGS-->
    <string name="not_account">You dont have an account yet?</string>
    <string name="password_login">Password</string>
    <string name="password_repeated">Repeated Password</string>
    <string name="user_login">User</string>

    <!--FRAGMENT_HOME.xtml STRINGS-->
    <string name="put_name">Put your Name: </string>
    <string name="ready_home">READY</string>

    <!--FRAGMENT_SLIDESHOW.XTML STRINGS-->
    <string name="menu_inventory">Inventory</string>
    <string name="minecraft" translatable="false">MINECRAFT</string>
    <string name="fortnite" translatable="false">FORTNITE</string>
    <string name="call_of_duty" translatable="false">CALL OF DUTY</string>
    <string name="welcome_inventory">Welcome </string>

    <!--FRAGMENT_GALLERY.xtml STRINGS-->
    <string name="menu_shop">Shop</string>
    <string name="valueGallery" translatable="false">200</string>
    <string name="minecraft_price">$ 200</string>
    <string name="cod_price">$ 120</string>
    <string name="fornite_price">$ 150</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

</resources>